other/verify-git-repositories/.chainsaw-test/policy-assert.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-git-repositories
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: github-repositories-only
      match:
        any:
        - resources:
            kinds:
              - GitRepository
      deny:
        conditions:
          any:
          - key: "request.object.spec.url"
            operator: NotEqual
            value: "https://github.com/fluxcd/?*"
          - key: "request.object.spec.url"
            operator: NotEqual
            value: "ssh://git@github.com:fluxcd/?*"
        message: "GitRepository URL must be from the allowed organization."
