other/verify-git-repositories/.chainsaw-test/chainsaw-test.yml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: verify-git-repositories
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../verify-git-repositories.yaml
    - assert:
        file: policy-assert.yaml
